kubernete/day5/ingress-task/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: ravinder-cust-ui
  name: ravinder-svc
spec:
  ports:
  - port: 1234
    protocol: TCP
    targetPort: 80
  selector:
    app: ravinder-cust-ui
  type: ClusterIP
status:
  loadBalancer: {}
